Version 0.5-11 (2013-07-01)

o Added mosaic.glmlist to plot mosaics (or other strucplots) for some or all models in a glmlist.


Version 0.5-8 (2013-03-06)

o Revised vcd-tutorial showing some examples of plyr; added a section on RC models
o Added Donner data with example of ggplot2 plot for a binomial glm()
o Added vcd-tutorial section using ggplot2 for Donner data
o Enhanced datasets() to provide a maxTitle argument (rev 153)
o Added doubledecker plots to Dyke.Rd (rev 156)
o Added Draft1970table and Draft1970 data sets (rev 158)
o Added example of doubledecker plots to vcd-tutorial vignette (rev 164)

Version 0.5-7 (2013-03-01)

o Completed CMHtest methods, adding overall tests across strata in a general way
o CMHtest now gets an S3 generic with a formula interface
o print Kappa gets digits= and CI= arguments

Version 0.5-6 (2012-11-30)

o Added Hosmer Lemeshow and HLtest methods, including plotting via vcd::rootogram()
o Added CMHtest for general Cochran-Mantel-Haenszel tests
o Revised vcd-tutorial vignette, adding a section on CMH tests; removed dependence on Z.cls

Version 0.5-3 (2012-03-07)

o Added Mammograms data (4x4, ordered factors, agreement)
o Extended mosaic.glm examples
o Added Alligator data (4x2x2x5, in frequency form)
o Added DaytonSurvey data (5-way, 2x2x2x2x2 in frequency form)
o Extended vcd-tutorial vignette with a section on collapsing over factors
o Removed aperm.* now that aperm.table is in base R

Version 0.5-2 (2010-11-28)

o Added loddsratio and related methods for log odds ratios, generalizing vcd::oddsratio from
  2 x 2 (x strata) tables to R x C (x strata) tables
o Added as.matrix.loddsratio, as.array.loddsratio methods
o Added some simple plot examples to example(loddsratio), anticipating a plot method
o Added data(Fungicide), a 2 x 2 x 2 x 2 table
o Renamed summarize() and related methods to summarise() to avoid conflict with plyr.
o Addition to vcd-tutorial vignette on use of aperm() with table objects