@@ -1,6 +1,8 @@
 Version 0.5-11 (2013-07-01)
 
-o Added mosaic.glmlist to plot mosaics (or other strucplots) for some or all models in a glmlist.
+o Added mosaic.glmlist to plot mosaics (or other strucplots) for some or all models in a glmlist (rev 169)
+o Added loglim-utilities.R, containing a suite of functions to provide a more conceptual way to specify
+  loglinear models by type ('joint', 'conditional', 'mutual', 'markov', 'saturated') (rev 171)
 
 
 Version 0.5-8 (2013-03-06)
